--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <h2>Look Guys !!! Im using Github</h2>
     <h3>This is my first Github experience</h3>
+    <img src="images/Slider image.png" alt="Test Image">
 
 </body>
 </html>
