--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
     <h3>This is my first Github experience</h3>
     <img src="images/Slider image.png" alt="Test Image">
 
+    <p>Hi from the 1st branch</p>
+    <input type="text" placeholder="Type Something">
+
 </body>
 </html>
