--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <img src="images/Slider image.png" alt="Test Image">
 
     <p>Hi from the 1st branch</p>
+    <h5>Now i am at the  my-second-branch</h5>
     <input type="text" placeholder="Type Something">
 
 </body>
