Updating 2nd Branch

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <p>Hi from the 1st branch</p>
     <h5>Now i am at the  my-second-branch</h5>
     <input type="text" placeholder="Type Something">
+    <p>Added more code at the my-second-branch</p>
 
 </body>
 </html>
